# Ahmaedinfo

./: README.md  __init__.py  api.py  pyproject.toml
.github/workflows/: publish.yml
ahmaedinfo/: __init__.py  api.py  pyproject.toml
