[project]
name = "ahmaedinfo"
version = "1.1.4"
description = "A simple API wrapper by Ahmed."
authors = [
    { name = "Ahmed" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/Ahmeadinfo/Ahmaedinfo"
Repository = "https://github.com/Ahmeadinfo/Ahmaedinfo"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
