[project]
name = "ahmaedinfo"
version = "1.0.9"
description = "AHMAEDINFO API Wrapper"
authors = [
    { name = "Ahmed" }
]
dependencies = ["requests"]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
